# trigonometric_polynomial_interpolation

./: CMakeLists.txt  README.md
src/: fft_core.c  fft_core.h  homographic_transform.c  homographic_transform.h  homography_core.c  homography_core.h  main_downsampling.c  main_shift.c  main_transform.c  main_upsampling.c  resampling.c  resampling.h  shift_transform.c  shift_transform.h
